fix(header): Media query and logo wrapping in title

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -32,11 +32,17 @@ body {
 
 header {
   h1 {
-    font-size: 3em;
+    font-size: 2em;
     margin: 0 0 1rem 0;
 
     img {
       max-height: 0.8em;
+    }
+  }
+
+  @media only screen and (min-width: 600px) {
+    h1 {
+      font-size: 3em;
     }
   }
 
